// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lingui/babel-plugin-extract-messages CallExpression i18n._() should extract messages from i18n._ call expressions 1`] = `
[
  {
    comment: undefined,
    context: undefined,
    id: Message,
    message: undefined,
    origin: [
      js-call-expression.js,
      2,
    ],
  },
  {
    comment: description,
    context: undefined,
    id: Description,
    message: undefined,
    origin: [
      js-call-expression.js,
      4,
    ],
  },
  {
    comment: undefined,
    context: undefined,
    id: ID,
    message: Message with id,
    origin: [
      js-call-expression.js,
      6,
    ],
  },
  {
    comment: undefined,
    context: undefined,
    id: Values {param},
    message: undefined,
    origin: [
      js-call-expression.js,
      8,
    ],
  },
  {
    comment: undefined,
    context: Context1,
    id: Some id,
    message: undefined,
    origin: [
      js-call-expression.js,
      10,
    ],
  },
]
`;

exports[`@lingui/babel-plugin-extract-messages CallExpression i18n._() should extract messages from i18n.t aliased expression 1`] = `
[
  {
    comment: Your comment,
    context: undefined,
    id: your.id,
    message: Your Id Message,
    origin: [
      node-call-expression-aliased.js,
      3,
    ],
  },
]
`;

exports[`@lingui/babel-plugin-extract-messages MessageDescriptor should extract messages from MessageDescriptors 1`] = `
[
  {
    comment: undefined,
    context: undefined,
    id: Message,
    message: undefined,
    origin: [
      js-message-descriptor.js,
      1,
    ],
  },
  {
    comment: description,
    context: undefined,
    id: Description,
    message: undefined,
    origin: [
      js-message-descriptor.js,
      3,
    ],
  },
  {
    comment: undefined,
    context: undefined,
    id: ID,
    message: Message with id,
    origin: [
      js-message-descriptor.js,
      5,
    ],
  },
  {
    comment: undefined,
    context: undefined,
    id: Values {param},
    message: undefined,
    origin: [
      js-message-descriptor.js,
      7,
    ],
  },
  {
    comment: undefined,
    context: Context1,
    id: Some id,
    message: undefined,
    origin: [
      js-message-descriptor.js,
      9,
    ],
  },
]
`;

exports[`@lingui/babel-plugin-extract-messages should extract Plural messages from JSX files when there's no Trans tag (integration) 1`] = `
[
  {
    comment: undefined,
    context: undefined,
    id: esnaQO,
    message: {count, plural, one {# book} other {# books}},
    origin: [
      jsx-without-trans.js,
      3,
    ],
  },
  {
    comment: undefined,
    context: Some context,
    id: 8qNz+K,
    message: {count, plural, one {# book} other {# books}},
    origin: [
      jsx-without-trans.js,
      4,
    ],
  },
]
`;

exports[`@lingui/babel-plugin-extract-messages should extract all messages from JS files (macros) 1`] = `
[
  {
    comment: undefined,
    context: undefined,
    id: xDAtGP,
    message: Message,
    origin: [
      js-with-macros.js,
      3,
    ],
  },
  {
    comment: undefined,
    context: undefined,
    id: xDAtGP,
    message: Message,
    origin: [
      js-with-macros.js,
      5,
    ],
  },
  {
    comment: description,
    context: undefined,
    id: Nu4oKW,
    message: Description,
    origin: [
      js-with-macros.js,
      7,
    ],
  },
  {
    comment: undefined,
    context: undefined,
    id: ID,
    message: Message with id,
    origin: [
      js-with-macros.js,
      12,
    ],
  },
  {
    comment: undefined,
    context: undefined,
    id: QCVtWw,
    message: Values {param},
    origin: [
      js-with-macros.js,
      17,
    ],
  },
  {
    comment: undefined,
    context: undefined,
    id: ID Some,
    message: Message with id some,
    origin: [
      js-with-macros.js,
      19,
    ],
  },
  {
    comment: undefined,
    context: undefined,
    id: Backtick,
    message: undefined,
    origin: [
      js-with-macros.js,
      24,
    ],
  },
  {
    comment: undefined,
    context: Context1,
    id: Some ID,
    message: undefined,
    origin: [
      js-with-macros.js,
      28,
    ],
  },
  {
    comment: undefined,
    context: Context1,
    id: Some other ID,
    message: undefined,
    origin: [
      js-with-macros.js,
      33,
    ],
  },
  {
    comment: undefined,
    context: Context2,
    id: Some ID,
    message: undefined,
    origin: [
      js-with-macros.js,
      38,
    ],
  },
  {
    comment: undefined,
    context: Context2,
    id: Some ID,
    message: undefined,
    origin: [
      js-with-macros.js,
      43,
    ],
  },
  {
    comment: undefined,
    context: undefined,
    id: sD7MQ4,
    message: TplLiteral,
    origin: [
      js-with-macros.js,
      48,
    ],
  },
]
`;

exports[`@lingui/babel-plugin-extract-messages should extract all messages from JSX files (macros) 1`] = `
[
  {
    comment: undefined,
    context: undefined,
    id: d1Kdl3,
    message: Hi, my name is {name},
    origin: [
      jsx-with-macros.js,
      3,
    ],
  },
  {
    comment: undefined,
    context: Context1,
    id: YikuIL,
    message: Some message,
    origin: [
      jsx-with-macros.js,
      4,
    ],
  },
  {
    comment: undefined,
    context: Context1,
    id: LBCs5C,
    message: Some other message,
    origin: [
      jsx-with-macros.js,
      5,
    ],
  },
  {
    comment: undefined,
    context: Context2,
    id: ru2rzr,
    message: Some message,
    origin: [
      jsx-with-macros.js,
      6,
    ],
  },
  {
    comment: undefined,
    context: undefined,
    id: MHrjPM,
    message: Title,
    origin: [
      jsx-with-macros.js,
      7,
    ],
  },
  {
    comment: undefined,
    context: undefined,
    id: esnaQO,
    message: {count, plural, one {# book} other {# books}},
    origin: [
      jsx-with-macros.js,
      9,
    ],
  },
]
`;

exports[`@lingui/babel-plugin-extract-messages should extract all messages from JSX files 1`] = `
[
  {
    comment: Description,
    context: undefined,
    id: msg.hello,
    message: undefined,
    origin: [
      jsx-without-macros.js,
      5,
    ],
  },
  {
    comment: undefined,
    context: Context1,
    id: msg.context,
    message: undefined,
    origin: [
      jsx-without-macros.js,
      6,
    ],
  },
  {
    comment: undefined,
    context: Context1,
    id: msg.notcontext,
    message: undefined,
    origin: [
      jsx-without-macros.js,
      7,
    ],
  },
  {
    comment: undefined,
    context: Context2,
    id: msg.context,
    message: undefined,
    origin: [
      jsx-without-macros.js,
      8,
    ],
  },
  {
    comment: undefined,
    context: undefined,
    id: msg.default,
    message: Hello World,
    origin: [
      jsx-without-macros.js,
      9,
    ],
  },
  {
    comment: undefined,
    context: undefined,
    id: msg.default,
    message: Hello World,
    origin: [
      jsx-without-macros.js,
      10,
    ],
  },
  {
    comment: undefined,
    context: undefined,
    id: Hi, my name is <0>{name}</0>,
    message: undefined,
    origin: [
      jsx-without-macros.js,
      11,
    ],
  },
]
`;
